fix: removed scrollbars from app (#98)

--- a/apps/provider/src/styles/layout/_base.scss
+++ b/apps/provider/src/styles/layout/_base.scss
@@ -108,6 +108,13 @@ app-root:empty::after {
         max-width: 100%;
         height: 100%;
         overflow-y: auto;
+
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
         // @media #{$xlarge-and-up} {
         //   @include horizontal-margin-right(-15px);
         // }
