--- a/apps/provider/src/styles/layout/_sidenav.scss
+++ b/apps/provider/src/styles/layout/_sidenav.scss
@@ -12,6 +12,17 @@
   &.open {
     width: 225px !important;
   }
+  &-content {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+  &-inner-container {
+    overflow: unset !important;
+  }
   @media #{$medium-only} {
     width: 80px !important;
   }
@@ -53,6 +64,13 @@ button.topnav-logo {
   max-height: calc(100vh - 64px);
   max-width: 400px;
   min-width: 225px;
+
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
   @media #{$small-and-down} {
     border: 1px solid var(--primary);
     min-width: 70vw;
